--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-*/target/**
-
-
 # Created by https://www.gitignore.io/api/intellij
 
 ### Intellij ###
@@ -22,3 +19,15 @@
 # Gradle:
 .idea/gradle.xml
 .idea/libraries
+
+### Maven ###
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+*/target/**
