--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,20 @@
             <version>2.2.4</version>
         </dependency>
 
+        <!-- Camel Facebook Component-->
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-facebook</artifactId>
+            <version>2.17.1</version>
+        </dependency>
+
+        <!-- Camel Twitter Component-->
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-twitter</artifactId>
+            <version>2.17.1</version>
+        </dependency>
+
         <!-- Camel PDF component-->
         <dependency>
             <groupId>org.apache.pdfbox</groupId>
