Small changes + application.properties BUGFIX: now not excluding EMployeeDB anymore

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,8 @@ mail.from=camel-api@group02WMPM.com
 mail.host=localhost
 
 logging.trace.enabled=false
+
+de.flapdoodle.logging.level=debug
+logging.level=debug
+
+spring.data.mongodb.port=12345
