--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,18 @@
             <artifactId>postgresql</artifactId>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-mongodb</artifactId>
+            <version>2.17.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-jpa</artifactId>
+            <version>2.17.0</version>
+        </dependency>
+
+
 
         <!-- Testing and Logging -->
         <dependency>
