--- a/pom.xml
+++ b/pom.xml
@@ -172,6 +172,15 @@
             <artifactId>itext</artifactId>
             <version>2.1.7</version>
         </dependency>
+
+        <!-- Camel  Mail -->
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-mail</artifactId>
+            <version>2.17.0</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
