--- a/pom.xml
+++ b/pom.xml
@@ -180,6 +180,12 @@
             <version>2.17.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-google-calendar</artifactId>
+            <version>2.17.1</version>
+        </dependency>
+
 
     </dependencies>
 
