--- a/pom.xml
+++ b/pom.xml
@@ -114,7 +114,19 @@
             <version>2.17.0</version>
         </dependency>
         <!-- Camel Swagger component. Somehow swagger needs hibernate validator -->
-        <dependency>
+        <!-- http://mvnrepository.com/artifact/org.hibernate/hibernate-entitymanager -->
+<dependency>
+    <groupId>org.hibernate</groupId>
+    <artifactId>hibernate-entitymanager</artifactId>
+    <version>3.3.6.Final</version>
+</dependency><!-- http://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
+<dependency>
+    <groupId>org.hibernate</groupId>
+    <artifactId>hibernate-core</artifactId>
+    <version>3.3.6.Final</version>
+</dependency>
+
+<dependency>
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-swagger-java</artifactId>
             <version>2.17.0</version>
@@ -179,6 +191,11 @@
             <artifactId>camel-mail</artifactId>
             <version>2.17.1</version>
         </dependency>
+        <dependency>
+    <groupId>org.hsqldb</groupId>
+    <artifactId>hsqldb</artifactId>
+    <version>2.3.1</version>
+</dependency>
 
 
     </dependencies>
