--- a/pom.xml
+++ b/pom.xml
@@ -115,15 +115,11 @@
         </dependency>
         <!-- Camel Swagger component. Somehow swagger needs hibernate validator -->
         <!-- http://mvnrepository.com/artifact/org.hibernate/hibernate-entitymanager -->
+<!-- http://mvnrepository.com/artifact/org.hibernate/hibernate-entitymanager -->
 <dependency>
     <groupId>org.hibernate</groupId>
     <artifactId>hibernate-entitymanager</artifactId>
-    <version>3.3.6.Final</version>
-</dependency><!-- http://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
-<dependency>
-    <groupId>org.hibernate</groupId>
-    <artifactId>hibernate-core</artifactId>
-    <version>3.3.6.Final</version>
+    <version>3.5.6-Final</version>
 </dependency>
 
 <dependency>
@@ -212,6 +208,18 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<configuration>
+					<archive>
+						<manifest>
+							<mainClass>com.Application</mainClass>
+						</manifest>
+					</archive>
+				</configuration>
+			</plugin>
         </plugins>
     </build>
 
