--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Created by https://www.gitignore.io/api/intellij
 
-config.properties
+#config.properties
 
 ### Intellij ###
 # User-specific stuff:
