--- a/config.properties
+++ b/config.properties
@@ -9,8 +9,8 @@ twitterAccessToken = 734281955454427136-tNvFD0XS89Yi0QdSgghCeuuRFyERaOj
 twitterAccessTokenSecret = rFpmvLGSOd4HCtYlcSfHPUQgrw3SGzbAvv8MM4zkXo1I8
 
 
-google.client.id=716865151150-iccnrc4oqli46h1fq9n19143j87gtgff.apps.googleusercontent.com
-google.client.secret=zHIhFsFufkggx2Vu7R_-0sMc&accessToken=ya29.Ci8DA4Ae-BELIHQT3s5l8DMtq5587ulAFAS1SHteYuK_DAAFn95DvQ2POoDsH8nk8g
-google.refresh.token=1/LABZFR1KNzgI_U2VO5xyE82V0TKjTj1knj6EEJK5seg
-#google.application.name=whatevs
-#google.calendar.id=
+googleclientId = 716865151150-dlau4uabcejen6lnrh53s4ddua0qpmp9.apps.googleusercontent.com
+googleclientSecret = uJYmNBKA9JEGvnZRiseTlAbP
+googlerefreshToken = 1/swHBO1aEeWiubsF7yZacM805f25Ma3SvB5hy0fdgBbc
+googleaccessToken = ya29.Ci8EAw6dazn60vAy-pp2qK3jHnHIBHD9_WrMngI8aG9_EKKu1EROSHVpPWbf3GYYbw
+googleapplicationName = ConstructionCompany
