--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
             <artifactId>de.flapdoodle.embed.mongo</artifactId>
             <version>1.50.3</version>
         </dependency>
-
+<dependency><groupId>org.springframework</groupId><artifactId>spring-orm</artifactId><version>3.2.14.RELEASE</version></dependency>
         <!-- Persistance -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
