--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,23 @@
             <artifactId>camel-spring-boot-starter</artifactId>
             <version>2.17.0</version>
         </dependency>
-        <!-- embedded Database-->
+        <!-- https://mvnrepository.com/artifact/org.apache.camel/camel-jms -->
+<dependency>
+    <groupId>org.apache.camel</groupId>
+    <artifactId>camel-jms</artifactId>
+    <version>2.17.1</version>
+</dependency><dependency>
+  <groupId>org.apache.activemq</groupId>
+  <artifactId>activemq-camel</artifactId>
+</dependency>
+<dependency>
+  <groupId>org.apache.activemq</groupId>
+  <artifactId>activemq-pool</artifactId>
+</dependency><dependency>
+  <groupId>org.apache.xbean</groupId>
+  <artifactId>xbean-spring</artifactId><version>4.5</version>
+</dependency>
+<!-- embedded Database-->
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
